cka/template/pods.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
spec:
  containers:
  - name: nginx
    image: nginx
   # ports: # 可以删除,题目不要求,demo自带
   #- containerPort: 80  
  - name: consul
    image: consul
