cka/template/pvc-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: web-server
spec:
  volumes:
    - name: task-pv-storage  #需要和volumeMounts的name一致
      persistentVolumeClaim:
        claimName: pv-volume
  containers:
    - name: web-server
      image: nginx:1.16
      ports:
        - containerPort: 80
          name: "http-server"
      volumeMounts:
        - mountPath: "/usr/share/nginx/html"
          name: task-pv-storage
