cka/template/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ng-svc
spec:
  type: NodePort ## 指定类型
  selector:
    app.kubernetes.io/name: 
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80 # 默认不填写 与port一致
      nodePort: 30001 # 手动指定静态端口
